# Ai-Quiz-Generator

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
attached_assets/: Pasted-AI-Wiki-Quiz-Generator-1-Objective-The-primary-goal-of-this-project-is-to-create-a-full-stack-app-1761278102614_1761278102615.txt
backend/: database.py  llm_quiz_generator.py  main.py  models.py  requirements.txt  scraper.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Modal.css  Modal.jsx  QuizDisplay.css  QuizDisplay.jsx
frontend/src/services/: api.js
frontend/src/tabs/: GenerateQuizTab.css  GenerateQuizTab.jsx  HistoryTab.jsx
